# misis_mlops_komtriangle

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: nlp_utils.py
tests/: test_nlp_utils.py
