[project]
name = "practice1"
version = "0.1.0"
authors = [
    {name = "test",email = "test@test.ru"}
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

